--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "vee-validate": "^3.0.11",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue2-datepicker": "^2.13.0",
+    "vuejs-datepicker": "^1.6.2",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
